<resources>
    <string name="app_name">Groovelt</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_desc">Don\'t have an account?</string>
    <string name="register_desc">Already have an account?</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="invalid_email">Invalid Email!</string>
    <string name="invalid_username">Invalid Username!</string>
    <string name="invalid_password">Password length at least 8 characters!</string>
    <string name="invalid_password_match">Password and Confirm Password doesn\'t match!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="find_the_best_dance_practices">Find the Best Dance Practices!</string>
    <string name="library">Library</string>
    <string name="empty_library">Library is still Empty!</string>
    <string name="name">Name</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="change_name">Change Name</string>
    <string name="log_out">Log Out</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="photo_from_gallery">Photo from Gallery</string>
    <string name="save">Save</string>

</resources>