<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fillFormGray"
    tools:context=".ui.main.ui.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded_bottom"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_profile"
            android:textColor="@color/primaryBlue"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="1dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_acc" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            android:textColor="@color/primaryBlue"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:textColor="@color/primaryBlue"
            android:textStyle="italic"
            tools:text="email@gmail.com" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_title">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/change_profile_image"
            android:textColor="@color/primaryBlue"
            app:cornerRadius="6dp"
            app:strokeColor="@color/primaryBlue"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:text="@string/change_name"
            android:textColor="@color/primaryBlue"
            app:cornerRadius="6dp"
            app:strokeColor="@color/primaryBlue"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primaryBlue"
            android:text="@string/log_out"
            app:cornerRadius="6dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>